# travel-agent-cloud

./: .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.override.example.yml  docker-compose.yml
.github/workflows/: build-images-dockerhub.yml  build-images.yml  ci.yml  deploy-k3s.yml
agent-runtime/: .env.example  Dockerfile  README.md  requirements.txt
agent-runtime/app/: agent.py  auth.py  auth_identities.py  auth_sessions.py  auth_tokens.py  conversations.py  data_importer.py  data_sources.py  db.py  events.py  exporter.py  knowledge.py  llm.py  mailer.py  main.py  metrics.py  models.py  oauth.py  object_storage.py  observability.py  plan_quality.py  planner.py  planning_context.py  profiles.py  progress.py  schemas.py  security.py  security_events.py  settings.py  summaries.py  summary_jobs.py  tracing.py  travel_agent_service.py  travel_tools.py  trip_plan_jobs.py  users.py  web_research.py  worker_main.py
deploy/: README.md
deploy/k8s/: README.md  agent.yaml  (+15 more)
docs/: agent-ai-architecture.md  api-guidelines.md  architecture.md  microservices-roadmap.md  observability.md  prototype-feature-parity.md  service-communication.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
scripts/: README.md  ai-eval.py  bootstrap-ubuntu.sh  seed-knowledge.py  smoke-test.ps1  smoke-test.sh
services/: README.md
services/common/: README.md  pyproject.toml
services/common/travel_common/: app.py  internal_auth.py  proxy.py  tracing.py  users.py
(+127 files in other folders)
