[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-common"
version = "0.1.0"
description = "Travel Agent Cloud service shared utilities."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
